cmd/server: fix /ping in swagger editor by setting CORS headers
If you run this app locally and use the OpenAPI editor to query
endpoints 'GET /ping' needs to respond with CORS headers. Otherwise
the swagger-editor (incorrectly) succeeds on the request but complains
the request failed.

See: https://editor.swagger.io/

Issue: https://github.com/swagger-api/swagger-ui/issues/4560
